bootstrap/bases/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - secretName: argocd-tls
    hosts:
    - "change-me"
  rules:
  - host: "change-me"
    http:
      paths:
      - pathType: Prefix
        path: "/" # "*" is needed. Without this, the UI Javascript and CSS will not load properly
        backend:
          service:
            name: argocd-server
            port:
              number: 80
